@@ -1,3 +1,7 @@
+* Enhancements
+
+  * :field_name can be passed as an Array like [ :first_name, :last_name ], which will join them with a space
+
 3.0.0.beta / 2013-07-26
 
 * Enhancements
